--- a/apps/ui/components/Navbar/Navbar.module.css
+++ b/apps/ui/components/Navbar/Navbar.module.css
@@ -1,7 +1,7 @@
 .section {
   margin-left: calc(var(--mantine-spacing-md) * -1);
   margin-right: calc(var(--mantine-spacing-md) * -1);
-  margin-bottom: var(--mantine-spacing-md);
+  /* margin-bottom: var(--mantine-spacing-md); */
 
   &:not(:last-of-type) {
     border-bottom: rem(1px) solid
@@ -17,8 +17,9 @@
 }
 
 .mainLinks {
-  padding-left: calc(var(--mantine-spacing-md) - var(--mantine-spacing-xs));
-  padding-right: calc(var(--mantine-spacing-md) - var(--mantine-spacing-xs));
+  padding-top: var(--mantine-spacing-md);
+  padding-left: var(--mantine-spacing-md);
+  padding-right: var(--mantine-spacing-md);
   padding-bottom: var(--mantine-spacing-md);
 }
 
@@ -81,5 +82,13 @@
   &:hover {
     background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
     color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));
+  }
+}
+
+.sectionLogout {
+  color: var(--mantine-color-red-5);
+
+  &:hover {
+    color: var(--mantine-color-red-7);
   }
 }
