--- a/apps/ui/components/SignInButton/SignInButton.module.css
+++ b/apps/ui/components/SignInButton/SignInButton.module.css
@@ -8,7 +8,9 @@
   padding: var(--mantine-spacing-md);
   color: light-dark(var(--mantine-color-black), var(--mantine-color-dark-0));
 
-  @mixin hover {
+  cursor: default;
+
+  /* @mixin hover {
     background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-8));
-  }
+  } */
 }
