--- a/apps/ui/components/SignInButton/SignInButton.module.css
+++ b/apps/ui/components/SignInButton/SignInButton.module.css
@@ -9,8 +9,17 @@
   color: light-dark(var(--mantine-color-black), var(--mantine-color-dark-0));
 
   cursor: default;
+}
 
-  /* @mixin hover {
+.signin {
+  display: block;
+  width: 100%;
+  padding: var(--mantine-spacing-md);
+  color: light-dark(var(--mantine-color-black), var(--mantine-color-dark-0));
+
+  cursor: pointer;
+
+  @mixin hover {
     background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-8));
-  } */
+  }
 }
