feat: added user self-activation

--- a/apps/ui/components/PageLayout/PageLayout.module.css
+++ b/apps/ui/components/PageLayout/PageLayout.module.css
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
+  padding-bottom: var(--mantine-spacing-md);
   gap: var(--mantine-spacing-md);
   height: 100%;
   width: 100%;
