--- a/apps/ui/components/PageLayout/PageLayout.module.css
+++ b/apps/ui/components/PageLayout/PageLayout.module.css
@@ -1,8 +1,7 @@
 .container {
   display: flex;
+  flex: 1;
   flex-direction: column;
   padding-bottom: var(--mantine-spacing-md);
   gap: var(--mantine-spacing-md);
-  height: 100%;
-  width: 100%;
 }
